relative file fix

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/GITHUB.loader.js";
+      var loaderUrl = buildUrl + "/UnityLearning_KitchenChaos_BUILD.loader.js";
       var config = {
-        dataUrl: buildUrl + "/GITHUB.data.br",
-        frameworkUrl: buildUrl + "/GITHUB.framework.js.br",
-        codeUrl: buildUrl + "/GITHUB.wasm.br",
+        dataUrl: buildUrl + "/UnityLearning_KitchenChaos_BUILD.data.br",
+        frameworkUrl: buildUrl + "/UnityLearning_KitchenChaos_BUILD.framework.js.br",
+        codeUrl: buildUrl + "/UnityLearning_KitchenChaos_BUILD.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Kitchen Chaos",
