update no compression

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/UnityLearning_KitchenChaos_BUILD.loader.js";
       var config = {
-        dataUrl: buildUrl + "/UnityLearning_KitchenChaos_BUILD.data.br",
-        frameworkUrl: buildUrl + "/UnityLearning_KitchenChaos_BUILD.framework.js.br",
-        codeUrl: buildUrl + "/UnityLearning_KitchenChaos_BUILD.wasm.br",
+        dataUrl: buildUrl + "/UnityLearning_KitchenChaos_BUILD.data",
+        frameworkUrl: buildUrl + "/UnityLearning_KitchenChaos_BUILD.framework.js",
+        codeUrl: buildUrl + "/UnityLearning_KitchenChaos_BUILD.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Kitchen Chaos",
